--- a/front-end/package.json
+++ b/front-end/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.4",
     "bootstrap": "^5.1.0",
     "firebase": "7.15.1",
+    "mapbox-gl": "^2.4.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.6",
     "react-dom": "^17.0.2",
