--- a/front-end/package.json
+++ b/front-end/package.json
@@ -7,6 +7,9 @@
     "@emotion/styled": "^11.3.0",
     "@fontsource/inter": "^4.5.0",
     "@fontsource/roboto": "^4.5.0",
+    "@date-io/date-fns": "^1.3.13",
+    "date-fns": "^2.22.1",
+    "@material-ui/pickers": "^3.3.10",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
