--- a/front-end/package.json
+++ b/front-end/package.json
@@ -3,16 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@fontsource/inter": "^4.5.0",
     "@fontsource/roboto": "^4.5.0",
-    "@date-io/date-fns": "^1.3.13",
-    "date-fns": "^2.22.1",
-    "@material-ui/pickers": "^3.3.10",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
+    "@material-ui/pickers": "^3.3.10",
     "@material/textfield": "^13.0.0",
     "@mui/icons-material": "^5.0.1",
     "@mui/material": "^5.0.1",
@@ -21,6 +20,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.4",
     "bootstrap": "^5.1.0",
+    "date-fns": "^2.22.1",
     "firebase": "7.15.1",
     "framer-motion": "^4.1.17",
     "node-sass": "^6.0.1",
@@ -30,6 +30,7 @@
     "react-map-gl": "^6.1.17",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
+    "react-toastify": "^8.0.3",
     "styled-components": "^5.3.1",
     "web-vitals": "^1.0.1"
   },
