--- a/front-end/package.json
+++ b/front-end/package.json
@@ -30,6 +30,7 @@
     "react-map-gl": "^6.1.17",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
+    "react-toastify": "^8.0.3",
     "styled-components": "^5.3.1",
     "web-vitals": "^1.0.1"
   },
