--- a/front-end/package.json
+++ b/front-end/package.json
@@ -20,6 +20,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.4",
     "bootstrap": "^5.1.0",
+    "build": "^0.1.4",
     "date-fns": "^2.22.1",
     "firebase": "7.15.1",
     "framer-motion": "^4.1.17",
@@ -32,7 +33,8 @@
     "react-scripts": "4.0.3",
     "react-toastify": "^8.0.3",
     "styled-components": "^5.3.1",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "yarn": "^1.22.15"
   },
   "scripts": {
     "start": "react-scripts start",
