--- a/front-end/package.json
+++ b/front-end/package.json
@@ -32,7 +32,8 @@
     "react-scripts": "4.0.3",
     "react-toastify": "^8.0.3",
     "styled-components": "^5.3.1",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "worker-loader": "^3.0.8"
   },
   "scripts": {
     "start": "react-scripts start",
